--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -24,5 +24,5 @@ jobs:
       run: |
         cd ./python
         echo "${{ secrets.DOCKERPW }}" | docker login -u "zlipscomb" --password-stdin
-        docker image build -t zlipscomb/gitops:hellov1.0 .
-        docker push zlipscomb/gitops:hellov1.0
+        docker image build -t zlipscomb/flux_lab:hellov1.2 .
+        docker push zlipscomb/flux_lab:hellov1.2
